tests/fixtures/invalid/invalid-config-1.yini
<garbage-content-in-this-file>

